# home-dashboard

./: README.md
dashboard-api/: Cargo.toml  wrangler.toml
dashboard-api/src/: lib.rs  token_manager.rs
dashboard-api/src/departures/: mod.rs  vasttrafik_api.rs
dashboard-api/src/models/: mod.rs
dashboard-api/src/models/vasttrafik/: microsoft_period_asp_net_core_period_mvc_period_problem_details.rs  mod.rs  vt_period_api_planera_resa_period_core_period_models_period_date_time_relates_to_type.rs  vt_period_api_planera_resa_period_core_period_models_period_position_transport_mode.rs  vt_period_api_planera_resa_period_web_period_v4_period_models_period_age_type.rs  vt_period_api_planera_resa_period_web_period_v4_period_models_period_api_error.rs  vt_period_api_planera_resa_period_web_period_v4_period_models_period_area_type.rs  vt_period_api_planera_resa_period_web_period_v4_period_models_period_arrival_details_include_type.rs  vt_period_api_planera_resa_period_web_period_v4_period_models_period_coordinate_api_model.rs  vt_period_api_planera_resa_period_web_period_v4_period_models_period_departure_details_include_type.rs  vt_period_api_planera_resa_period_web_period_v4_period_models_period_departures_and_arrivals_period_arrival_api_model.rs  vt_period_api_planera_resa_period_web_period_v4_period_models_period_departures_and_arrivals_period_arrival_details_api_model.rs  vt_period_api_planera_resa_period_web_period_v4_period_models_period_departures_and_arrivals_period_call_details_api_model.rs  (+84 more)
dashboard-firmware-esp32/: Cargo.toml  sdkconfig.defaults
(+12 files in other folders)
