[package]
name = "dashboard-api"
version = "0.1.0"
edition = "2021"
authors = ["Emil Nordén <emilnorden@yahoo.se>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'd1'] }
worker-macros = { version = "0.6", features = ['http'] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking"] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
anyhow = "1.0.100"
log = "0.4.28"
http = "1.3"
serde-wasm-bindgen = { version = "0.6.5" }
serde_with = "3.15.1"
serde_json = "1.0.145"
# tokio = { version = "1.48.0", features = ["full"] }